# perid

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/backend/: runserver.py
backend/backend/auth/: app.py  constants.py  database.py  deps.py  models.py  schemas.py  utils.py
front/: package-lock.json  package.json
front/src/: App.js  index.js
front/src/Context/: authProvider.js
front/src/Pages/: about.js  home.js  login.js  main.js  unauthorized.js
front/src/components/: login.jsx
